# ale-libtorch-ppo

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md
configs/: debug.yaml  v0.yaml  v1.yaml
scripts/: download_unpack_roms.sh  flamegraph.sh
src/: BUILD  ale_example.cc  ale_libtorch_example.cc  libtorch_example.cc
src/ai/: BUILD  buffer.cc  buffer.h  environment.cc  environment.h  episode_life.cc  episode_life.h  episode_recorder.cc  episode_recorder.h  gae.cc  gae.h  ppo.cc  ppo.h  queue.h  rollout.cc  rollout.h  video_recorder.cc  video_recorder.h  vision.cc  vision.h
src/ai/environment/: BUILD  environment.cc  environment.h  episode_life.cc  episode_life.h  episode_observation_recorder.cc  episode_observation_recorder.h  episode_recorder.cc  episode_recorder.h  fire_reset.cc  fire_reset.h  max_and_skip.cc  max_and_skip.h  noop_reset.cc  noop_reset.h  reset_on_return.cc  reset_on_return.h  resize.cc  resize.h  truncate_on_episode_return.cc  truncate_on_episode_return.h
src/ai/ppo/: BUILD  losses.cc  losses.h  train.cc  train.h
test/ai/: BUILD  environment_test.cc  gae-test.cc  vision-test.cc
