"""
ALE Bazel
"""
module(
    name = "hello_world_cpp",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")

tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
tools.cmake(version = "3.31.1")

bazel_dep(name = "zlib", version = "1.3.1.bcr.6")

# Use C++20 standard
cc_common_attributes = use_extension("@rules_cc//cc:extensions.bzl", "cc_common")
cc_common_attributes.update_attributes(
    copts = ["-std=c++20"],
)
use_repo(cc_common_attributes, "cc_common")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "arcade_learning_environment",
    urls = ["https://github.com/Farama-Foundation/Arcade-Learning-Environment/archive/refs/tags/v0.11.1.tar.gz"],
    strip_prefix = "Arcade-Learning-Environment-0.11.1",
    build_file = "//third_party:ale.BUILD",
    integrity = "sha256-K4eK4bf+u0mMerU1F5HG2YONwhS0gl7sDfG1O1i2qqM=",
)

bazel_dep(name = "platforms", version = "0.0.11")

bazel_dep(name = "tensorboard_logger")
git_override(
    module_name = "tensorboard_logger",
    commit = "18096201dfa74a52493bdd0f60b270689ac111e7",
    remote = "https://github.com/cemlyn007/tensorboard_logger.git",
)

libtorch_extension = use_extension("//third_party:libtorch.bzl", "libtorch_configure_extension")
libtorch_extension.configure(
    version = "2.4.1",  # Specify your desired version here
)
use_repo(libtorch_extension, "libtorch")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    patches = [
        ":third_party/hedron_compile_commands.patch",
    ],
)
bazel_dep(name = "stb", version = "0.0.0-20241109-5c20573")

bazel_dep(name = "googletest", version = "1.17.0")
git_override(
    module_name = "googletest",
    remote = "https://github.com/google/googletest.git",
    commit = "35b75a2cba6ef72b7ce2b6b94b05c54ca07df866",
)
